Bug 314856, mousewheel scrolling is too fast on OS X, especially 10.4.3.  Don't scale mousewheel deltas, instead relying on system acceleration.  Acceleration is provided at least as early as 10.2, which is our minimum, so there.  r=josh sr=pink